# programming_formalisms_project_autumn_2023

./: .gitignore  .wordlist.txt  README.md  benchmark.py  benchmark_1.py  benchmark_2.R  benchmark_2.py  benchmark_2_harald.prof  benchmark_2_harald.py  benchmark_2_pontus.py  class_list_and_owners.md  fairytale.md  fairytale.md~  main.py  measure_big_o.py  pyproject.toml  richel_benchmark.R  richel_benchmark_2.py
.github/ISSUE_TEMPLATE/: create-new-class.md
.github/workflows/: check_package.yaml  check_spelling.yaml  lint_code.yaml  measure_coverage.yml  run_benchmarks.yaml
design/: ClassDiagram.md  README.md  RunSimulation.md  activity_diagram_HJ.md  classes_HT.md  use_case_diagram_HJ.md  use_cases_room1.md
learners/: README.md  is_odd.py
learners/alex/: check.py  is_odd.py
learners/camille/: README.md  is_even.py  is_odd.py  is_zero.py
learners/cormac/: is_even.py
learners/harald/: is_even.py  is_odd.py
learners/jesper/: is_even.py  is_odd.py  is_zero.py
learners/jonrich/: add_numbers.py  jdd.py
learners/josefine/: is_odd.py  is_probability.py  testing.py
learners/markella/: is_even.py
learners/oleksandr/: is_even.py  is_odd.py
learners/richel/: README.md  code.py
learners/rjdaniels/: is_odd.R
learners/urs/: iseven.py
learners/yuhez/: is_odd.py
scripts/: run_benchmarks.sh
src/pfpa2023/: SpinDirection.py  ThresholdConc.py  bacteria.py  bacteria_shape.py  bacterium.py  coordinate.py  duck.py  eniro.py  enviro.py  environment.py  envronmnt.py  food_concentration.py  motion_type.py  (+3 more)
tests/: __init__.py  test-enviro.py  test_SpinDirection.py  test_ThresholdConc.py  test_bacteria.py  test_bacteria_shape.py  test_bacterium.py  test_coin_flip_alex.sh  test_coordinate.py  test_duck.py  test_enviro.py  test_environment.py  test_food_concentration.py  test_motion_type.py  test_nutrients.py  test_spin_direction.py  test_testing.py
(+1 files in other folders)
