[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pf_example"
version = "0.1"
authors = [
  { name="Richèl Bilderbeek", email="richel@richelbilderbeek.nl" },
]
description = "The UPPMAX Programming Formalisms course example project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/programming-formalisms/programming_formalisms_example_project"
"Bug Tracker" = "https://github.com/programming-formalisms/programming_formalisms_example_project/issues"

[tool.ruff]
    select = ["ALL"]
    ignore = ["ANN", "PT", "PTH", "D211", "D213", "S101", "B006"]

